[CSS JIT] Fail to compile when we are out of executable memory https://bugs.webkit.org/show_bug.cgi?id=145483 rdar://problem/21166612

Patch by Benjamin Poulain <bpoulain@apple.com> on 2015-06-01
Reviewed by Andreas Kling.

We should use a soft failure when the Linker fails to allocate
executable memory for the CSS JIT. We will just fallback to slow
code when that happen, better slow CSS than crashing.

Credit to Chris for finding this problem.

* cssjit/SelectorCompiler.cpp:
(WebCore::SelectorCompiler::SelectorCodeGenerator::compile):


Canonical link: https://commits.webkit.org/163560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185071 268f45cc-cd09-0410-ab3c-d52691b4dbfc